# hcos-coherence-engine

./: LICENSE  README.md  pyproject.toml
examples/: sample_input.json
hcos/: cli.py  coherence.py  orchestrator.py
hcos/input/: 1Piece
